--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "multiocular": "^0.8.1",
     "nanodelay": "^2.0.2",
     "nanostores": "^1.0.1",
-    "size-limit": "^11.2.0"
+    "size-limit": "^11.2.0",
+    "tsx": "^4.20.6"
   },
   "prettier": {
     "arrowParens": "avoid",
