--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "nanodelay": "^2.0.2",
     "nanostores": "^1.0.1",
     "size-limit": "^11.2.0",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   },
   "prettier": {
     "arrowParens": "avoid",
